{
    "name": "MyHumanController",
    "maps": [
        {
            "name": "GamePlay",
            "id": "aa05514f-da86-4741-907a-61020a5fb6b6",
            "actions": [
                {
                    "name": "TakeBody",
                    "type": "Button",
                    "id": "af101261-6061-4372-9d4d-df8aa87ce609",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LeaveBody",
                    "type": "Button",
                    "id": "26f314dd-eaf3-4e42-8e59-da1bdaf4b90f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MyMovement",
                    "type": "Button",
                    "id": "29442f6d-4014-4d43-8ad7-74dce50a9ca1",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Grab",
                    "type": "Button",
                    "id": "6c980e87-ce4b-463d-a4d5-400a2e1c1690",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Clean",
                    "type": "Button",
                    "id": "06911a8f-032e-4b02-8398-74bed8a52ab1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c2d6810-3e3d-455c-9deb-bcc92d7ba1a4",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TakeBody",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3530d95f-92b0-4a3d-8eb7-8fcc3c3abe3d",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeaveBody",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e8936be-7c84-45be-b950-9b4fa13f9b0e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MyMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef1d6463-1799-4d88-84c0-99c5c0b8e6cd",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Grab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d232ac4-0c25-4e33-872e-1fba9805a1b5",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Clean",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}